feat: add auth api
