# src/modules/auth/auth.model.ts
@@ -1,0 +1,17 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class CreateUserAuthDto {
+  @IsString()
+  @IsNotEmpty()
+  login: string;
+
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+}
+
+export class RefreshTokenDto {
+  @IsString()
+  @IsNotEmpty()
+  refreshToken: string;
+}
